--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
-APP_MODULE_PATH=product_search
-
+# OpenAI Config
 OPENAI_API_KEY=
+
+# Optional MongoDB Vector Database Config. 
+# Leave 'USE_MONGO_VECTOR_DB=False' to use an in memory vector database.
+USE_MONGO_VECTOR_DB=False
+MONGO_CLUSTER_URL=
+MONGO_DATABASE_NAME=
+MONGO_CLUSTER_NAME=
+MONGO_PROJECT_ID=
+MONGO_API_PUBLIC_KEY=
+MONGO_API_PRIVATE_KEY=
