docs: Fill in README

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # OpenAI Config
 OPENAI_API_KEY=
 
-# Optional MongoDB Vector Database Config. 
+# Optional MongoDB Atlas Vector Search Config. 
 # Leave 'USE_MONGO_VECTOR_DB=False' to use an in memory vector database.
 USE_MONGO_VECTOR_DB=False
 MONGO_CLUSTER_URL=
