--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ OPENAI_API_KEY=
 # Leave 'USE_MONGO_VECTOR_DB=False' to use an in memory vector database.
 USE_MONGO_VECTOR_DB=False
 MONGO_CLUSTER_URL=
-MONGO_DATABASE_NAME=
-MONGO_CLUSTER_NAME=
+MONGO_DATABASE_NAME=tabular-semantic-search
+MONGO_CLUSTER_NAME=free-cluster
 MONGO_PROJECT_ID=
 MONGO_API_PUBLIC_KEY=
 MONGO_API_PRIVATE_KEY=
